fix: change RS School's logo url

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <p>
                     <a href="https://rs.school/js/">Rolling Scopes School`s Frontend and JavaScript course
                         <br>
-                        <img src="https://rs.school/images/rs_school_js.svg-"
+                        <img src="https://rs.school/images/rs_school_js.svg"
                         alt="The course's logo"
                         width="553" height="205">
                     </a>
